[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Enemy_01_Bullets.gd" type="Script" id=2]
[ext_resource path="res://imgs/enemy_sprites/slimin.png" type="Texture" id=3]
[ext_resource path="res://scenes/Random_Hor_Movement.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 13 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 13 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 6.5 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="B_Spawner" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="LeftCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -31, 0 )

[node name="RightCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 31, 0 )

[node name="DownCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="UpCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 7 )
animation = "walk"
frame = 4
playing = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 8 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]

[editable path="Hurtbox"]
